# AIChatOrder

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TECHNICAL_REPORT.md  cache.py  container.py  database.py  exceptions.py  health.py  intent_registry.py  main.py  monitoring.py  pyproject.toml  requirements.txt  retry.py  rules_engine.py  skills.py  slot_schema.py  test_fix.py  test_optimization.py  test_phase1.py  vector_store.py  workflow.py
app/: main.py
app/api/: __init__.py  schemas.py
config/: __init__.py  settings.py
config/schema/: intents.yaml  skills.yaml
core/: __init__.py  interfaces.py  types.py  validators.py
evals/: NEXT_STEPS.md  README.md  __init__.py  run.py  run_standalone.py
evals/ab_testing/: README.md  __init__.py  analyzer.py  experiment.py  runner.py
evals/fixtures/: golden_intents.yaml  personas.yaml
evals/graders/: __init__.py  base.py  confusion_grader.py  fuzzy_grader.py  (+7 more)
infrastructure/: __init__.py  cache.py  database.py  health.py  monitoring.py  resilience.py  retry_manager.py
models/: __init__.py  intent.py  order.py  session.py  slot_schema.py
nlp/: __init__.py  extractor.py  intent_registry.py  prompts.py  retriever.py  vector_store.py
schema/: slots.yaml  slots_v2.yaml
services/: __init__.py  classifier.py  ordering_assistant.py  rules_engine.py  session_manager.py  skills.py
static/: chat.html  index.html  portal.html
tests/: test_container.py  test_health.py  test_optimization.py  test_phase1.py  test_retry_manager.py  test_validators.py
workflow/: __init__.py  ordering.py
(+59 files in other folders)
