[project]
name = "intent-classifier-demo"
version = "0.1.0"
description = "AI点单意图识别可视化Demo"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "openai>=1.50.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "httpx[socks]>=0.27.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "chromadb>=0.4.0",
    "tenacity>=8.2.0",
]

[project.scripts]
demo = "main:run"
